--- a/app/globals.css
+++ b/app/globals.css
@@ -14,8 +14,8 @@
 
 @media (prefers-color-scheme: dark) {
   :root {
-    --background: #0a0a0a;
-    --foreground: #ededed;
+    --background: #ffffff;
+    --foreground: #ffffff;
   }
 }
 
@@ -23,4 +23,34 @@ body {
   background: var(--background);
   color: var(--foreground);
   font-family: Arial, Helvetica, sans-serif;
+}
+
+.view-button {
+  @apply block
+    bg-gray-100
+    text-gray-800
+        m-1
+    border border-transparent
+    rounded-md
+    font-medium
+    leading-4
+    max-w-[150px]
+    overflow-hidden
+    px-3 py-1
+    whitespace-nowrap
+    text-ellipsis
+    text-center;
+}
+.breakdown-activity{
+    @apply flex items-center justify-between
+}
+.breakdown-leftover-prev-month{
+    @apply flex items-center justify-between
+}
+.breakdown-assigned-in-moth{
+    @apply flex items-center justify-between
+}
+.breakdown-available{
+    @apply flex items-center justify-between
+
 }
